--- a/package.json
+++ b/package.json
@@ -7,15 +7,8 @@
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.66.0"
-  }
-}{
-  "name": "camiaabgelvip_bot",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
   },
-  "dependencies": {
-    "node-telegram-bot-api": "^0.66.0"
+  "engines": {
+    "node": "20.x"
   }
 }
