--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "node-telegram-bot-api": "^0.66.0"
   },
   "engines": {
