--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "camiaabgelvip_bot",
+  "name": "telegram-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.66.0"
-  },
-  "engines": {
-    "node": "20.x"
+    "node-telegram-bot-api": "^0.63.0"
   }
 }
